feat: add drawing image

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					type="button"
 					class="btn icon-blank"
 					title="512x512"
-					onclick="checkThisSize(512,'./assets/data/image.png')"
+					onclick="checkThisSizeImage(this,'./assets/data/image.png')"
 				>
 					<span class="button-text">512x512</span>
 				</button>
