refactor: menu switcher move to function

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					type="button"
 					class="btn icon-blank"
 					title="4x4"
-					onclick="checkThisSize(4,'./assets/data/4x4.json')"
+					onclick="checkThisSize(this,4,'./assets/data/4x4.json')"
 				>
 					<span class="button-text">4x4</span>
 				</button>
@@ -50,7 +50,7 @@
 					type="button"
 					class="btn icon-blank"
 					title="32x32"
-					onclick="checkThisSize(32,'./assets/data/32x32.json')"
+					onclick="checkThisSize(this,32,'./assets/data/32x32.json')"
 				>
 					<span class="button-text">32x32</span>
 				</button>
